[project]
name = "capper"
version = "0.1.0"
description = "Compliant B2B lead research CLI for public business contact discovery."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Capper" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
capper = "lead_research.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
